<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#111E2F"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        >

        <TextView
            android:id="@+id/hi"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Hi!"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="Selamat datang!!"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hi" />

        <ImageView
            android:id="@+id/lineImage"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="330dp"
            android:rotation="21"
            android:src="@drawable/line2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="Log out"
            android:backgroundTint="@color/lavender"
            android:textAllCaps="false"
            app:layout_constraintLeft_toRightOf="@+id/name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/vaultCard"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#37386E"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vaultName"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/vaultImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Brankas"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/vaultDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide1_desc"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/finderCard"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#37386E"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaultCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/finderName"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/vaultImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide2_subtitle"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/finderDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide2_desc"
                        android:textColor="@color/white"
                        android:justificationMode="inter_word"
                        android:textSize="12sp"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/safeCard"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#37386E"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finderCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/safeName"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/vaultImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide3_subtitle"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/safeDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide3_desc"
                        android:textColor="@color/white"
                        android:justificationMode="inter_word"
                        android:textSize="12sp"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/learnCard"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#37386E"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/safeCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/learnName"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/vaultImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide4_subtitle"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/learnDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/onboarding_slide4_desc"
                        android:textColor="@color/white"
                        android:justificationMode="inter_word"
                        android:textSize="12sp"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>